axum-macros/tests/from_request/fail/double_via_attr.stderr
error: `via` specified more than once
 --> tests/from_request/fail/double_via_attr.rs:4:55
  |
4 | struct Extractor(#[from_request(via(axum::Extension), via(axum::Extension))] State);
  |                                                       ^^^
